--- a/msproducts.properties
+++ b/msproducts.properties
@@ -1,4 +1,6 @@
 # Désactiver le client Config Server (si non utilisé)
+
+
 spring.cloud.config.enabled=true
 
 # Comme c’est le serveur Eureka, il ne s’enregistre pas lui-même
@@ -8,6 +10,11 @@ eureka.client.fetch-registry=true
 # URL du serveur Eureka (souvent localhost)
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 
+# Propriétés dynamiques : Les propriétés app.message et app.feature-enabled seront injectées
+# dans les beans (@Value ou @ConfigurationProperties)
+
+app.message=Bonjour controller!
+app.feature-enabled=true
 
 logging.level.root=ERROR
 logging.level.com.myHR=INFO
