--- a/eventservice.properties
+++ b/eventservice.properties
@@ -1,11 +1,24 @@
-# Désactiver le client Config Server (si non utilisé)
-
-
-spring.cloud.config.enabled=true
-
 # Comme c’est le serveur Eureka, il ne s’enregistre pas lui-même
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
 
 # URL du serveur Eureka (souvent localhost)
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+
+#Logging
+logging.level.root=ERROR
+logging.level.com.myHR=INFO
+logging.level.org.springframework.boot.web.embedded.tomcat=INFO
+
+# ===============================
+# ORACLE Database Configuration
+# ===============================
+spring.datasource.url=jdbc:oracle:thin:@localhost:1521/ORCLPDB
+spring.datasource.username=myapp
+spring.datasource.password=MyAppPassword
+spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
+
+spring.jpa.database-platform=org.hibernate.dialect.OracleDialect
+spring.jpa.hibernate.ddl-auto=update
+spring.sql.init.mode=always
+spring.jpa.defer-datasource-initialization=true
