--- a/msproducts.properties
+++ b/msproducts.properties
@@ -1,8 +1,3 @@
-# Désactiver le client Config Server (si non utilisé)
-
-
-spring.cloud.config.enabled=true
-
 # Comme c’est le serveur Eureka, il ne s’enregistre pas lui-même
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
@@ -16,19 +11,21 @@ eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 app.message=Bonjour controller!
 app.feature-enabled=true
 
+#Logging
 logging.level.root=ERROR
 logging.level.com.myHR=INFO
-logging.level.org.springframework.boot.autoconfigure.h2=INFO
 logging.level.org.springframework.boot.web.embedded.tomcat=INFO
 
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+# ===============================
+# ORACLE Database Configuration
+# ===============================
+spring.datasource.url=jdbc:oracle:thin:@localhost:1521/ORCLPDB
+spring.datasource.username=myapp
+spring.datasource.password=MyAppPassword
+spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
+
+spring.jpa.database-platform=org.hibernate.dialect.OracleDialect
 spring.jpa.hibernate.ddl-auto=update
+spring.sql.init.mode=always
 spring.jpa.defer-datasource-initialization=true
 
-# Enable H2 Console
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
