--- a/notificationservice.properties
+++ b/notificationservice.properties
@@ -5,6 +5,18 @@ eureka.client.fetch-registry=true
 # URL du serveur Eureka (souvent localhost)
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 
+
+#Resilience4j Retry
+resilience4j.retry.instances.notificationRetry.max-attempts=3
+resilience4j.retry.instances.notificationRetry.wait-duration=2s
+
+#Circuit Breaker
+resilience4j.circuitbreaker.instances.notificationCircuitBreaker.sliding-window-size=5
+resilience4j.circuitbreaker.instances.notificationCircuitBreaker.failure-rate-threshold=50
+resilience4j.circuitbreaker.instances.notificationCircuitBreaker.wait-duration-in-open-state=10s
+resilience4j.circuitbreaker.instances.notificationCircuitBreaker.automatic-transition-from-open-to-half-open-enabled=true
+resilience4j.circuitbreaker.instances.notificationCircuitBreaker.permitted-number-of-calls-in-half-open-state=3
+
 #Logging
 logging.level.root=ERROR
 logging.level.com.myHR=INFO
