--- a/userservice.properties
+++ b/userservice.properties
@@ -5,6 +5,8 @@ eureka.client.fetch-registry=true
 # URL du serveur Eureka (souvent localhost)
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 
+security.jwt.secret=A4kVIT9eXHnjs8dRXXg3om0HXbQ/MAAev34MH89QM5o=
+security.jwt.expiration-ms=86400000
 
 #Resilience4j Retry
 resilience4j.retry.instances.userRetry.max-attempts=3
