--- a/eventservice.properties
+++ b/eventservice.properties
@@ -32,5 +32,5 @@ spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 
 spring.jpa.database-platform=org.hibernate.dialect.OracleDialect
 spring.jpa.hibernate.ddl-auto=update
-spring.sql.init.mode=never
+spring.sql.init.mode=always
 spring.jpa.defer-datasource-initialization=true
